fixed api in team page
